# api/swagger.yaml
@@ -91,18 +91,22 @@ paths:
           description: el formato del id es incorrecto
         500:
           description: Hubo algun error
-  /order/delivered:
+  /order:
     get:
       tags:
       - Order
-      summary: Devolver las ordenes en ese estado
+      summary: Devolver las ordenes en el estado que recibe por query param
       description: |
-        Devuelve las ordenes que esten en el estado entregadas (DELIVERED).
-        Esto se ejecuta todos los dias a las 22:00hs y genera una lista con las ordenes que estan en estado entregadas(DELIVERED), ni bien lo hace las pasa a estado COMPLETED(asi se diferencia cuales ya fueron informadas y cuales no). Si hay ordenes en estado ON WAY se asume que estas fueron entregadas asique se les modifica el estado para informar ( y si es necesario se manda mail o se informa a reclamos).
+        Esto se ejecuta todos los dias a las 22:00hs y genera una lista con las ordenes que estan en estado entregadas(DELIVERED) (flujo por defecto), ni bien lo hace las pasa a estado COMPLETED(asi se diferencia cuales ya fueron informadas y cuales no). Si hay ordenes en estado ON WAY se asume que estas fueron entregadas asique se les modifica el estado para informar ( y si es necesario se manda mail o se informa a reclamos).
       operationId: getOrderByStatus
       produces:
       - application/json
-      parameters: []
+      parameters:
+      - name: estado
+        in: query
+        description: El estado que se quiere saber las ordenes. Si no recibe nada trae las de estado 'DELIVERED'.
+        required: false
+        type: string
       responses:
         200:
           description: Devuelve la orden pedida
